fixed alignment

--- a/css/master.css
+++ b/css/master.css
@@ -10,7 +10,7 @@
   }
   
   main {
-    min-width: 100%;
+    width: 100%;
     height: 100vh;
   }
   h1 {
@@ -24,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
   }
   .hidden {
     display: none;
